--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#mapid { height: 180px; }
+
+/* .leaflet-container {
+  height: 600px;
+  width: 100px;
+} */
+
